--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 </head>
 
 <body>
-<h1 class="title">第２監査課ホームページ</h1>
+<h1 class="title">第２監査課</h1>
+<h1 class="title">ホームページ</h1>
 <div class="row">
   <span class="no">1.</span>
-   <tb>課共有:</tb>
+   <tb class="no">課共有:</tb>
    
       <a href="https://www.office.com/?auth=2" target="_blank">安全</a>
       <a href="https://www.office.com/?auth=2" target="_blank">品質</a>
@@ -30,29 +31,29 @@
     </tb>
 </div>
 <div class="row">
-  <span>2.</span>
-  <tb>測定室:</tb>
+  <span class="no">2.</span>
+  <tb class="no">測定室:</tb>
   <a href="https://www.office.com/?auth=2" target="_blank">安全</a>
   <a href="https://www.office.com/?auth=2" target="_blank">品質</a>
   <a href="https://www.office.com/?auth=2" target="_blank">作業</a>
 </div>
 <div class="row">
-  <span>3.</span>
-  <tb>試験室:</tb>
+  <span class="no">3.</span>
+  <tb class="no">試験室:</tb>
   <a href="https://www.office.com/?auth=2" target="_blank">安全</a>
   <a href="https://www.office.com/?auth=2" target="_blank">品質</a>
   <a href="https://www.office.com/?auth=2" target="_blank">作業</a>
 </div>
 <div class="row">
-    <span>4.</span>
-    <tb>鋳造測定室:</tb>
+  <span class="no">4.</span>
+    <tb class="no">鋳造測定室:</tb>
     <a href="https://www.office.com/?auth=2" target="_blank">安全</a>
     <a href="https://www.office.com/?auth=2" target="_blank">品質</a>
     <a href="https://www.office.com/?auth=2" target="_blank">作業</a>
 </div>
 <div class="row">
-  <span>5.</span>
-  <tb>号口支援:</tb>
+  <span class="no">5.</span>
+  <tb class="no">号口支援:</tb>
   <a href="https://www.office.com/?auth=2" target="_blank">安全</a>
   <a href="https://www.office.com/?auth=2" target="_blank">品質</a>
   <a href="https://www.office.com/?auth=2" target="_blank">作業</a>
