--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <span class="no">1.</span>
    <tb class="no">課共有:</tb>
    
-      <a href="https://www.office.com/?auth=2" target="_blank">安全</a>
-      <a href="https://www.office.com/?auth=2" target="_blank">品質</a>
-      <a href="https://www.office.com/?auth=2" target="_blank">作業</a>
+      <a href="https://apps.powerapps.com/play/e/default-d1c1335e-f582-42a9-b6fe-5e1a16eb9bc8/a/c7063302-33e2-4bd6-847a-de95ed2fede6?tenantId=d1c1335e-f582-42a9-b6fe-5e1a16eb9bc8&source=portal" target="_blank">安全</a>
+      <a href="https://apps.powerapps.com/play/e/default-d1c1335e-f582-42a9-b6fe-5e1a16eb9bc8/a/c7063302-33e2-4bd6-847a-de95ed2fede6?tenantId=d1c1335e-f582-42a9-b6fe-5e1a16eb9bc8&source=portal" target="_blank">品質</a>
+      <a href="https://apps.powerapps.com/play/e/default-d1c1335e-f582-42a9-b6fe-5e1a16eb9bc8/a/c7063302-33e2-4bd6-847a-de95ed2fede6?tenantId=d1c1335e-f582-42a9-b6fe-5e1a16eb9bc8&source=portal" target="_blank">作業</a>
     </tb>
 </div>
 <div class="row">
