--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<h1 class="title">第２監査課</h1>
+<h1 class="title">田原品管 第２監査課</h1>
 <h1 class="title">ホームページ</h1>
 <div class="row">
   <span class="no">1.</span>
